# geant4-template

./: CMakeLists.txt  actionInit.hh  detConstruction.cc  detConstruction.hh  runaction.cc  sim.cc  vis.mac
inc/: actioninit.hh  detcon.hh  generator.hh  runaction.hh
src/: actionInit.cc  actioninit.cc  detcon.cc  generator.cc  runaction.cc
